--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>SEE – Accueil</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<nav>
+  <h1>SEE</h1>
+  <ul>
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="informations.html">Informations</a></li>
+    <li><a href="podcast.html">Podcast</a></li>
+    <li><a href="interview.html">Interviews</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <div class="burger" onclick="toggleMenu()">
+    <span></span><span></span><span></span>
+  </div>
+</nav>
+
+<div class="mobile-menu" id="mobileMenu">
+  <a href="index.html">Accueil</a>
+  <a href="informations.html">Informations</a>
+  <a href="podcast.html">Podcast</a>
+  <a href="interview.html">Interviews</a>
+  <a href="contact.html">Contact</a>
+</div>
+
+<div class="container">
+  <h2>Bienvenue sur SEE</h2>
+  <p>Le média indépendant dédié à l’actualité, aux interviews et aux podcasts.</p>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
