--- a/podcast.html
+++ b/podcast.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>SEE – Podcast</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<nav>...</nav>
+<div class="mobile-menu" id="mobileMenu">...</div>
+
+<div class="container">
+  <div class="article">
+    <h2>Podcast #1</h2>
+    <p>Discussion avec un invité.</p>
+  </div>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
