--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>SEE – Contact</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<nav>...</nav>
+<div class="mobile-menu" id="mobileMenu">...</div>
+
+<div class="container">
+  <h2>Contact</h2>
+  <form>
+    <input type="text" placeholder="Nom">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Message"></textarea>
+    <button>Envoyer</button>
+  </form>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
