--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>SEE – Connexion</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<div class="container">
+  <h2>Connexion Pro SEE</h2>
+  <form action="dashboard.html">
+    <input type="text" placeholder="Identifiant">
+    <input type="password" placeholder="Mot de passe">
+    <button>Se connecter</button>
+  </form>
+</div>
+
+</body>
+</html>
