--- a/index.html
+++ b/index.html
@@ -2,37 +2,38 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>SEE – Accueil</title>
+<title>SEE – Média</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <nav>
-  <h1>SEE</h1>
+  <div class="logo">SEE</div>
+
   <ul>
     <li><a href="index.html">Accueil</a></li>
     <li><a href="informations.html">Informations</a></li>
     <li><a href="podcast.html">Podcast</a></li>
-    <li><a href="interview.html">Interviews</a></li>
+    <li><a href="interview.html">Interview</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <div class="burger" onclick="toggleMenu()">
-    <span></span><span></span><span></span>
-  </div>
+
+  <a href="connexion.html" class="login-btn">
+    <span class="user-icon">👤</span> Login
+  </a>
 </nav>
 
-<div class="mobile-menu" id="mobileMenu">
-  <a href="index.html">Accueil</a>
-  <a href="informations.html">Informations</a>
-  <a href="podcast.html">Podcast</a>
-  <a href="interview.html">Interviews</a>
-  <a href="contact.html">Contact</a>
-</div>
+<header class="hero">
+  <h1>SEE</h1>
+  <p>Média indépendant – actualité, interviews & podcasts</p>
+</header>
 
-<div class="container">
-  <h2>Bienvenue sur SEE</h2>
-  <p>Le média indépendant dédié à l’actualité, aux interviews et aux podcasts.</p>
-</div>
+<main>
+  <h2>Dernières publications</h2>
+  <div id="posts"></div>
+</main>
 
 <script src="script.js"></script>
 </body>
