--- a/interview.html
+++ b/interview.html
@@ -2,21 +2,30 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>SEE – Interviews</title>
+<title>Interviews – SEE</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<nav>...</nav>
-<div class="mobile-menu" id="mobileMenu">...</div>
+<nav>
+  <div class="logo">SEE</div>
+  <ul>
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="informations.html">Informations</a></li>
+    <li><a href="podcast.html">Podcast</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <a href="connexion.html" class="login-btn">👤 Login</a>
+</nav>
 
-<div class="container">
-  <div class="article">
-    <h2>Interview exclusive</h2>
-    <p>Contenu de l’interview.</p>
-  </div>
-</div>
+<main class="page">
+  <h1>Interviews</h1>
+  <p>Découvrez nos interviews exclusives.</p>
+</main>
 
-<script src="script.js"></script>
+<a href="index.html" class="back-home">← Revenir à l’accueil</a>
+
 </body>
 </html>
