--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>SEE – Média</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SEE — Média</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav>
   <div class="logo">SEE</div>
-
   <ul>
     <li><a href="index.html">Accueil</a></li>
     <li><a href="informations.html">Informations</a></li>
@@ -19,22 +17,31 @@
     <li><a href="interview.html">Interview</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-
-  <a href="connexion.html" class="login-btn">
-    <span class="user-icon">👤</span> Login
-  </a>
+  <a href="connexion.html" class="login-btn">👤 Login</a>
 </nav>
 
-<header class="hero">
-  <h1>SEE</h1>
-  <p>Média indépendant – actualité, interviews & podcasts</p>
-</header>
+<main class="container">
+  <h1>À la une</h1>
 
-<main>
-  <h2>Dernières publications</h2>
-  <div id="posts"></div>
+  <article class="card">
+    <img src="https://via.placeholder.com/900x400">
+    <h2>Titre principal de l’actualité</h2>
+    <p>Résumé court et clair de l’article principal publié par SEE.</p>
+    <span class="date">Publié le 10 janvier 2026</span>
+  </article>
+
+  <section class="grid">
+    <article class="card">
+      <h3>Actualité secondaire</h3>
+      <p>Résumé bref de l’actualité.</p>
+    </article>
+    <article class="card">
+      <h3>Interview récente</h3>
+      <p>Extrait d’une interview publiée.</p>
+    </article>
+  </section>
 </main>
 
-<script src="script.js"></script>
 </body>
 </html>
+
