--- a/informations.html
+++ b/informations.html
@@ -2,30 +2,28 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Informations – SEE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SEE — Informations</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav>
   <div class="logo">SEE</div>
   <ul>
     <li><a href="index.html">Accueil</a></li>
+    <li><a href="informations.html">Informations</a></li>
     <li><a href="podcast.html">Podcast</a></li>
     <li><a href="interview.html">Interview</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="connexion.html" class="login-btn">👤 Login</a>
 </nav>
 
-<main class="page">
+<main class="container">
+  <a class="back" href="index.html">← Revenir à l’accueil</a>
   <h1>Informations</h1>
-  <p>SEE est un média indépendant dédié à l’actualité, aux analyses et aux formats longs.</p>
+  <p>SEE est un média indépendant dédié à l’actualité, aux interviews et aux podcasts.</p>
 </main>
-
-<a href="index.html" class="back-home">← Revenir à l’accueil</a>
 
 </body>
 </html>
