--- a/podcast.html
+++ b/podcast.html
@@ -2,11 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Podcast – SEE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SEE — Podcast</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav>
@@ -14,18 +13,24 @@
   <ul>
     <li><a href="index.html">Accueil</a></li>
     <li><a href="informations.html">Informations</a></li>
+    <li><a href="podcast.html">Podcast</a></li>
     <li><a href="interview.html">Interview</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="connexion.html" class="login-btn">👤 Login</a>
 </nav>
 
-<main class="page">
+<main class="container">
+  <a class="back" href="index.html">← Revenir à l’accueil</a>
   <h1>Podcasts</h1>
-  <p>Nos podcasts seront bientôt disponibles.</p>
-</main>
 
-<a href="index.html" class="back-home">← Revenir à l’accueil</a>
+  <article class="card">
+    <h3>Podcast #1</h3>
+    <p>Description du podcast.</p>
+    <audio controls>
+      <source src="" type="audio/mpeg">
+    </audio>
+  </article>
+</main>
 
 </body>
 </html>
