--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Contact – SEE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SEE — Contact</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav>
@@ -16,22 +15,21 @@
     <li><a href="informations.html">Informations</a></li>
     <li><a href="podcast.html">Podcast</a></li>
     <li><a href="interview.html">Interview</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="connexion.html" class="login-btn">👤 Login</a>
 </nav>
 
-<main class="page">
+<main class="container">
+  <a class="back" href="index.html">← Revenir à l’accueil</a>
   <h1>Contact</h1>
 
-  <form class="contact-form">
-    <input type="text" placeholder="Nom" required>
-    <input type="email" placeholder="Email" required>
+  <form class="card">
+    <input type="text" placeholder="Nom">
+    <input type="email" placeholder="Email">
     <textarea placeholder="Message"></textarea>
-    <button type="submit">Envoyer</button>
+    <button>Envoyer</button>
   </form>
 </main>
-
-<a href="index.html" class="back-home">← Revenir à l’accueil</a>
 
 </body>
 </html>
