--- a/login.html
+++ b/login.html
@@ -2,29 +2,18 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Connexion – SEE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SEE — Login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<nav>
-  <div class="logo">SEE</div>
-</nav>
-
-<main class="page">
-  <h1>Connexion Pro</h1>
-
-  <form onsubmit="login(event)">
-    <input type="text" id="username" placeholder="Identifiant" required>
-    <input type="password" id="password" placeholder="Mot de passe" required>
-    <button type="submit">Se connecter</button>
-  </form>
+<main class="login-page">
+  <h1>Connexion SEE</h1>
+  <input type="text" placeholder="Identifiant">
+  <input type="password" placeholder="Mot de passe">
+  <a href="tableau-de-bord.html" class="btn">Se connecter</a>
 </main>
 
-<a href="index.html" class="back-home">← Revenir à l’accueil</a>
-
-<script src="script.js"></script>
 </body>
 </html>
