--- a/index.html
+++ b/index.html
@@ -2,14 +2,170 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>SEE — Média</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<title>SEE – Actualité & Médias</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Inter', sans-serif;
+}
+
+body{
+  background:#f4f6f8;
+  color:#111;
+}
+
+/* ===== NAV BAR ===== */
+nav{
+  position:sticky;
+  top:0;
+  z-index:1000;
+  background:white;
+  border-bottom:1px solid #ddd;
+  padding:14px 24px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.logo{
+  font-size:22px;
+  font-weight:700;
+}
+
+nav ul{
+  list-style:none;
+  display:flex;
+  gap:24px;
+}
+
+nav ul li a{
+  text-decoration:none;
+  color:#111;
+  font-weight:500;
+  font-size:14px;
+}
+
+/* LOGIN ICON */
+.login-link{
+  display:flex;
+  align-items:center;
+  gap:6px;
+  font-size:14px;
+  text-decoration:none;
+  color:#111;
+}
+
+.login-link span{
+  font-size:18px;
+}
+
+/* ===== HERO ===== */
+header{
+  background:white;
+  padding:60px 24px;
+  border-bottom:1px solid #ddd;
+}
+
+header h1{
+  font-size:42px;
+  max-width:900px;
+  margin-bottom:16px;
+}
+
+header p{
+  font-size:18px;
+  color:#444;
+  max-width:700px;
+}
+
+/* ===== ARTICLES ===== */
+main{
+  max-width:1100px;
+  margin:auto;
+  padding:40px 24px;
+}
+
+#articles{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(300px,1fr));
+  gap:30px;
+}
+
+.card{
+  background:white;
+  border-radius:6px;
+  overflow:hidden;
+  box-shadow:0 4px 20px rgba(0,0,0,0.06);
+  transition:.3s;
+}
+
+.card:hover{
+  transform:translateY(-4px);
+}
+
+.card img{
+  width:100%;
+  height:200px;
+  object-fit:cover;
+}
+
+.card-content{
+  padding:18px;
+}
+
+.card h2{
+  font-size:20px;
+  margin-bottom:10px;
+}
+
+.card p{
+  font-size:14px;
+  color:#444;
+  line-height:1.5;
+}
+
+.card span{
+  display:block;
+  margin-top:12px;
+  font-size:12px;
+  color:#777;
+}
+
+/* ===== FOOTER ===== */
+footer{
+  margin-top:60px;
+  padding:30px;
+  text-align:center;
+  font-size:13px;
+  color:#666;
+  border-top:1px solid #ddd;
+  background:white;
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:800px){
+  nav ul{
+    display:none;
+  }
+  header h1{
+    font-size:30px;
+  }
+}
+</style>
 </head>
+
 <body>
 
+<!-- NAV -->
 <nav>
   <div class="logo">SEE</div>
+
   <ul>
     <li><a href="index.html">Accueil</a></li>
     <li><a href="informations.html">Informations</a></li>
@@ -17,31 +173,35 @@
     <li><a href="interview.html">Interview</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="connexion.html" class="login-btn">👤 Login</a>
+
+  <a href="connexion.html" class="login-link">
+    <span>👤</span> Login
+  </a>
 </nav>
 
-<main class="container">
-  <h1>À la une</h1>
+<!-- HERO -->
+<header>
+  <h1>L’actualité, les médias et les voix qui comptent</h1>
+  <p>
+    SEE est un média indépendant dédié à l’information, aux interviews
+    et aux formats audio qui décryptent le monde d’aujourd’hui.
+  </p>
+</header>
 
-  <article class="card">
-    <img src="https://via.placeholder.com/900x400">
-    <h2>Titre principal de l’actualité</h2>
-    <p>Résumé court et clair de l’article principal publié par SEE.</p>
-    <span class="date">Publié le 10 janvier 2026</span>
-  </article>
-
-  <section class="grid">
-    <article class="card">
-      <h3>Actualité secondaire</h3>
-      <p>Résumé bref de l’actualité.</p>
-    </article>
-    <article class="card">
-      <h3>Interview récente</h3>
-      <p>Extrait d’une interview publiée.</p>
-    </article>
+<!-- ARTICLES -->
+<main>
+  <section id="articles">
+    <!-- Articles injectés automatiquement -->
   </section>
 </main>
 
+<!-- FOOTER -->
+<footer>
+  © 2026 — SEE Média · Tous droits réservés
+</footer>
+
+<!-- SCRIPT GLOBAL -->
+<script src="app.js"></script>
+
 </body>
 </html>
-
