--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer{
     <li><a href="contact.html">Contact</a></li>
   </ul>
 
-  <a href="connexion.html" class="login-link">
+  <a href="login.html" class="login-link">
     <span>👤</span> Login
   </a>
 </nav>
