--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ nav{
   font-weight:700;
 }
 
+/* MENU */
 nav ul{
   list-style:none;
   display:flex;
@@ -51,7 +52,7 @@ nav ul li a{
   font-size:14px;
 }
 
-/* LOGIN ICON */
+/* LOGIN */
 .login-link{
   display:flex;
   align-items:center;
@@ -148,7 +149,7 @@ footer{
   background:white;
 }
 
-/* ===== RESPONSIVE ===== */
+/* ===== MOBILE ===== */
 @media(max-width:800px){
   nav ul{
     display:none;
@@ -174,6 +175,7 @@ footer{
     <li><a href="contact.html">Contact</a></li>
   </ul>
 
+  <!-- IMPORTANT : login.html -->
   <a href="login.html" class="login-link">
     <span>👤</span> Login
   </a>
@@ -200,7 +202,6 @@ footer{
   © 2026 — SEE Média · Tous droits réservés
 </footer>
 
-<!-- SCRIPT GLOBAL -->
 <script src="app.js"></script>
 
 </body>
