--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ nav{
   font-weight:700;
 }
 
-/* MENU */
 nav ul{
   list-style:none;
   display:flex;
@@ -52,7 +51,7 @@ nav ul li a{
   font-size:14px;
 }
 
-/* LOGIN */
+/* LOGIN / DASHBOARD */
 .login-link{
   display:flex;
   align-items:center;
@@ -175,8 +174,8 @@ footer{
     <li><a href="contact.html">Contact</a></li>
   </ul>
 
-  <!-- IMPORTANT : login.html -->
-  <a href="login.html" class="login-link">
+  <!-- LOGIN / DASHBOARD -->
+  <a href="login.html" class="login-link" id="authLink">
     <span>👤</span> Login
   </a>
 </nav>
@@ -202,7 +201,16 @@ footer{
   © 2026 — SEE Média · Tous droits réservés
 </footer>
 
-<script src="app.js"></script>
+<script>
+// ===== AUTH CHECK =====
+const authLink = document.getElementById("authLink");
+const isLogged = localStorage.getItem("see_logged");
+
+if(isLogged === "true"){
+  authLink.innerHTML = "<span>🧑‍💼</span> Dashboard";
+  authLink.href = "dashboard.html";
+}
+</script>
 
 </body>
 </html>
