--- a/dashboard.html
+++ b/dashboard.html
@@ -2,27 +2,31 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard SEE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<title>Dashboard – SEE</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+  font-family:Inter, sans-serif;
+  background:#f4f6f8;
+  padding:40px;
+}
+h1{
+  margin-bottom:20px;
+}
+a{
+  display:inline-block;
+  margin-top:20px;
+}
+</style>
 </head>
+
 <body>
 
-<nav>
-  <div class="logo">SEE — Dashboard</div>
-  <a href="index.html">Retour site</a>
-</nav>
+<h1>Dashboard SEE</h1>
+<p>Bienvenue dans l’espace professionnel.</p>
 
-<div class="container">
-  <h1>Nouvelle publication</h1>
+<a href="index.html">← Retour à l’accueil</a>
 
-  <input id="title" placeholder="Titre">
-  <input id="image" placeholder="Lien image">
-  <textarea id="content" placeholder="Contenu"></textarea>
-  <button onclick="publish()">Publier</button>
-</div>
-
-<script src="app.js"></script>
 </body>
 </html>
-
