--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ footer{
 
 <!-- ARTICLES -->
 <main>
-  <section id="articles">
+  <section id="articles"></section>
+<script src="app.js"></script>
     <!-- Articles injectés automatiquement -->
   </section>
 </main>
